# finance-docs

./: .gitignore  README.md  pyproject.toml
results/: All_Financials.csv  cnbc_bbca.csv  final_data.csv  merged_fin_tec.csv  monthly_close.csv
src/: cnbc.py  extract.py  model-3.py  model.py  scrape-news.py  tecnical.py  transform.py
try/: Agustus-2025.csv  Agustus-2025_all.csv  Agustus-2025_filtered.csv  main.py  select.py
